# rewards-dao

./: Anchor.toml  ReadMe.md  mint_usdc.sh  package.json
programs/dao/: Cargo.toml
programs/dao/src/: lib.rs
programs/rewards/: Cargo.toml
programs/rewards/src/: constants.rs  error.rs  lib.rs
programs/rewards/src/instructions/: burn_tokens.rs  fees.rs  initialize_token.rs  mint_tokens.rs  mod.rs  toggle_freeze.rs
programs/rewards/src/state/: events.rs
programs/rewards/src/utils/: mod.rs  token2022.rs
programs/sol-dao/: Cargo.toml
programs/sol-dao/src/: lib.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: constants.rs  error.rs  events.rs  lib.rs
programs/transfer_hook/src/instructions/: mod.rs  transfer_hook.rs
tests/: dao.ts  rewards.ts  sol-dao.ts  transfer_hook.ts
tests/genesis/: usdc.json  usdc_clone.json
utils/: burn.ts  constants.ts  freezeOps.ts  initialization.ts  mint.ts  setup.ts  transfer.ts
