[package]
name = "rewards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "interface-instructions"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
transfer_hook = { path = "../transfer_hook", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "3.2.3" }
solana-program = "1.18.17"
spl-tlv-account-resolution = "0.6.3"
spl-transfer-hook-interface = "0.6.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"
sha2-const = "0.1.2"
spl-token-metadata-interface = "0.3.3"